rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_attr_neither_path_nor_local.stderr
error: expected identifier
 --> tests/ui/compile_fail/mutator_fails_if_attr_neither_path_nor_local.rs:5:60
  |
5 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, "hello world")]
  |                                                            ^^^^^^^^^^^^^
